--- a/source/build-cmake/libCSPosd/CMakeLists.txt
+++ b/source/build-cmake/libCSPosd/CMakeLists.txt
@@ -66,6 +66,21 @@ include_directories(${THREADS_INCLUDE_PATH})
 
 include(FindPkgConfig)
 
+include(FindLibAV)
+if(LIBAV_FOUND)
+      add_definitions(-DUSE_LIBAV)
+      if(USE_MOVIE_SAVER)
+        add_definitions(-DUSE_MOVIE_SAVER)
+      endif()
+      if(USE_MOVIE_LOADER)
+        add_definitions(-DUSE_MOVIE_LOADER)
+      endif()
+else()
+      set(USE_MOVIE_SAVER OFF)
+      set(USE_MOVIE_LOADER OFF)
+      set(LIBAV_LIBRARIES "")
+endif()
+
 if(USE_SDL2)
    if(CMAKE_CROSSCOMPILING)
       include_directories(${SDL2_INCLUDE_DIRS})
