[WIP][Qt][MOVIE] Still crash when using libav.

--- a/source/src/qt/avio/CMakeLists.txt
+++ b/source/src/qt/avio/CMakeLists.txt
@@ -6,6 +6,8 @@ set(s_qt_avio_headers
 
 set(s_qt_avio_srcs
 	  movie_saver.cpp
+	  movie_saver_audio.cpp
+	  movie_saver_fileio.cpp
 )
 
 if(USE_QT_5)
