[WIN32][Qt][MOVIE_SAVER] Mostly working movie recording (but delay time is larger ?) when building with MuinGW (Cross Build). See, build-cmake/toolchain_mingw_cross_linux.cmake. You must set ffmpeg's distributed dev binary and shared lib binary to /usr/local/i586-mingw-msvc/ (or your settings) with cross-building, and bundle DLLs to same directory of eemufoo.exe .

--- a/source/build-cmake/libCSPavio/CMakeLists.txt
+++ b/source/build-cmake/libCSPavio/CMakeLists.txt
@@ -80,12 +80,13 @@ if(LIBAV_FOUND)
       if(USE_MOVIE_LOADER)
         add_definitions(-DUSE_MOVIE_LOADER)
       endif()
+      add_definitions(-D__STDC_CONSTANT_MACROS)
+      add_definitions(-D__STDC_FORMAT_MACROS)
 else()
       set(USE_MOVIE_SAVER OFF)
       set(USE_MOVIE_LOADER OFF)
       set(LIBAV_LIBRARIES "")
 endif()
-
 if(USE_SDL2)
    if(CMAKE_CROSSCOMPILING)
       include_directories(${SDL2_INCLUDE_DIRS})
@@ -113,6 +114,10 @@ set(SRC_BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../src)
 if(USE_QT_5)
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+endif()
+
+if(LIBAV_FOUND)
+  include_directories(${LIBAV_INCLUDE_DIRS})
 endif()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/avio)
