--- a/source/src/qt/gui/CMakeLists.txt
+++ b/source/src/qt/gui/CMakeLists.txt
@@ -9,6 +9,7 @@ set(s_qt_gui_headers
 	  commonclasses.h
 	  sound_dialog.h
 	  mainwidget_base.h
+	  menu_metaclass.h
 	  menu_disk.h
 	  menu_cmt.h
 	  menu_cart.h
@@ -41,6 +42,7 @@ set(s_qt_gui_srcs
 
           qt_input.cpp
 	  menu_control.cpp
+	  menu_metaclass.cpp
 	  menu_disk.cpp
 	  menu_quickdisk.cpp
 	  menu_compactdisc.cpp
@@ -85,30 +87,30 @@ else()
 endif()
 
 if(WIN32)
-include (GenerateExportHeader)
-
 add_library(qt_gui
 	  ${s_qt_gui_srcs}
 	  ${s_qt_gui_headers_MOC}
 )
 
-
+#include (GenerateExportHeader)
 #add_library(CSPgui SHARED
 #	  ${s_qt_gui_srcs}
 #	  ${s_qt_gui_headers_MOC}
 #	  )
 #target_link_libraries(CSPgui PUBLIC
-#	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPosd/build-win32/qt/osd/CSPosd.dll
-#	  Qt5::Core
+#	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPemu_utils/build-win32/qt/emuutils/libemu_utils.a
+#	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPavio/build-win32/qt/avio/libqt_avio.a
+#	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPosd/build-win32/qt/osd/libqt_osd.a
+##	  Qt5::Core
 #	  Qt5::Gui
 #	  Qt5::OpenGL
-#	  Qt5::Svg
 #	  Qt5::Widgets
+#	  ${SDL2_LIBRARIES}
 #	  )
 #QT5_USE_MODULES(CSPgui Widgets Core Gui OpenGL)
 #
 #generate_export_header(CSPgui
-#        BASE_NAME CSPgui
+#       BASE_NAME CSPgui
 #        EXPORT_MACRO_NAME CSPgui_EXPORT
 #        EXPORT_FILE_NAME CSPgui_Export.h
 #        STATIC_DEFINE CSPgui_BUILT_AS_STATIC
@@ -121,8 +123,8 @@ add_library(CSPgui SHARED
 )
 
 set_target_properties(CSPgui PROPERTIES 
-			     SOVERSION 1.3.0
-			     VERSION 1.3.0
+			     SOVERSION 1.3.1
+			     VERSION 1.3.1
 			     )
 INSTALL(TARGETS CSPgui DESTINATION ${LIBCSP_INSTALL_DIR})
 endif()
