--- a/source/src/qt/emuutils/CMakeLists.txt
+++ b/source/src/qt/emuutils/CMakeLists.txt
@@ -13,23 +13,21 @@ include (GenerateExportHeader)
 add_library(emu_utils
 	  ${s_qt_emuutils_srcs}
 )
-
+#add_library(CSPemu_utils SHARED
+#	  ${s_qt_emuutils_srcs}
+#)
 
 #target_link_libraries(CSPemu_utils PUBLIC
 #	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPosd/build-win32/qt/osd/CSPosd.dll
 #	  Qt5::Core
-#	  Qt5::Gui
-#	  Qt5::OpenGL
-#	  Qt5::Svg
-#	  Qt5::Widgets
 #	  )
 #QT5_USE_MODULES(CSPgui Widgets Core Gui OpenGL)
 #
-#generate_export_header(CSPgui
-#        BASE_NAME CSPgui
-#        EXPORT_MACRO_NAME CSPgui_EXPORT
-#        EXPORT_FILE_NAME CSPgui_Export.h
-#        STATIC_DEFINE CSPgui_BUILT_AS_STATIC
+#generate_export_header(CSPemu_utils
+#        BASE_NAME CSPemu_utils
+#        EXPORT_MACRO_NAME CSPemu_utils_EXPORT
+#        EXPORT_FILE_NAME CSPemu_utils_Export.h
+#        STATIC_DEFINE CSPemu_utils_BUILT_AS_STATIC
 #)
 
 else()
