--- a/source/src/qt/gui/CMakeLists.txt
+++ b/source/src/qt/gui/CMakeLists.txt
@@ -99,24 +99,22 @@ add_library(qt_gui
 	  ${s_qt_gui_srcs}
 	  ${s_qt_gui_headers_MOC}
 )
-
 #include (GenerateExportHeader)
 #add_library(CSPgui SHARED
 #	  ${s_qt_gui_srcs}
-#	  ${s_qt_gui_headers_MOC}
+##	  ${s_qt_gui_headers_MOC}
 #	  )
 #target_link_libraries(CSPgui PUBLIC
 #	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPemu_utils/build-win32/qt/emuutils/libemu_utils.a
 #	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPavio/build-win32/qt/avio/libqt_avio.a
 #	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPosd/build-win32/qt/osd/libqt_osd.a
-##	  Qt5::Core
+#	  Qt5::Core
 #	  Qt5::Gui
 #	  Qt5::OpenGL
 #	  Qt5::Widgets
 #	  ${SDL2_LIBRARIES}
 #	  )
 #QT5_USE_MODULES(CSPgui Widgets Core Gui OpenGL)
-#
 #generate_export_header(CSPgui
 #       BASE_NAME CSPgui
 #        EXPORT_MACRO_NAME CSPgui_EXPORT
@@ -129,6 +127,13 @@ add_library(CSPgui SHARED
 	  ${s_qt_gui_srcs}
 	  ${s_qt_gui_headers_MOC}
 )
+target_link_libraries(CSPgui PUBLIC
+	  Qt5::Core
+	  Qt5::Gui
+	  Qt5::OpenGL
+	  Qt5::Widgets
+	  ${SDL2_LIBRARIES}
+	  )
 
 set_target_properties(CSPgui PROPERTIES 
 			     SOVERSION 2.0.0
