--- a/source/src/qt/CMakeLists.txt
+++ b/source/src/qt/CMakeLists.txt
@@ -25,18 +25,43 @@ SET(s_qt_osd_srcs
 )
 
 if(WIN32)
-  include (GenerateExportHeader)
-
-  add_library(qt_osd
+add_library(qt_osd
     ${s_qt_osd_srcs}
     ${s_qt_osd_headers_MOC}
-  )
+    )
+#include (GenerateExportHeader)
+#  add_library(CSPosd SHARED
+#    ${s_qt_osd_srcs}
+#    ${s_qt_osd_headers_MOC}
+#  )
+#target_link_libraries(CSPosd PUBLIC
+#	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPemu_utils/build-win32/qt/emuutils/libemu_utils.a
+#	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPavio/build-win32/qt/avio/libqt_avio.a
+#	   ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPosd/build-win32/qt/osd/libqt_osd.a
+#	  Qt5::Core
+#	  Qt5::Gui
+#	  Qt5::OpenGL
+#	  Qt5::Widgets
+#	  ${SDL2_LIBRARIES}
+#	  )
+#generate_export_header(CSPosd
+#       BASE_NAME CSPosd
+#       EXPORT_MACRO_NAME CSPosd_EXPORT
+#       EXPORT_FILE_NAME CSPosd_Export.h
+#       STATIC_DEFINE CSPgosd_BUILT_AS_STATIC
+#)
 
 else()
   add_library(CSPosd SHARED
     ${s_qt_osd_srcs}
     ${s_qt_osd_headers_MOC}
   )
+target_link_libraries(CSPosd PUBLIC
+	  Qt5::Core
+	  Qt5::Gui
+	  Qt5::Widgets
+	  ${SDL2_LIBRARIES}
+	  )
   
   set_target_properties(CSPosd PROPERTIES 
      SOVERSION 2.0.0
