[OSD][Qt][MZ2500] Implement socket functions.Still not tested.

--- a/source/src/qt/common/CMakeLists.txt
+++ b/source/src/qt/common/CMakeLists.txt
@@ -5,6 +5,9 @@ set(s_qt_common_headers
 	  mainwidget.h
 	  ../osd.h
 )
+if(USE_SOCKET)
+  set(s_qt_common_headers ${s_qt_common_headers} ../osd_socket.h)
+endif()
 
 if(USE_QT_5)
   QT5_WRAP_CPP(s_qt_common_headers_MOC ${s_qt_common_headers})
