--- a/source/src/CMakeLists.txt
+++ b/source/src/CMakeLists.txt
@@ -3,13 +3,11 @@ message("* common/common")
 #set(CMAKE_BUILD_SETTING_C_FLAGS "${CMAKE_C_FLAGS} -msse2 -msse -mmmx")
  
 add_library(common_common
-#	  common.cpp
-	  config.cpp
-#	  fifo.cpp
-#	  fileio.cpp
-	  debugger.cpp
+	config.cpp
+	debugger.cpp
+	romakana.cpp
 )
 
 add_library(common_emu
-	  emu.cpp
+	emu.cpp
 )
