[UI][Qt] Fix TYPOs.

--- a/source/src/qt/gui/CMakeLists.txt
+++ b/source/src/qt/gui/CMakeLists.txt
@@ -108,6 +108,7 @@ if(USE_QT_5)
   QT5_ADD_RESOURCES(s_qt_gui_RCC ${RESOURCE}
                     ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/commontexts.qrc
                     ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/shaders.qrc
+					${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/i18n_global.qrc
 		    )
 else()
   QT4_WRAP_CPP(s_qt_gui_headers_MOC ${s_qt_gui_headers})
