--- a/source/src/vm/CMakeLists.txt
+++ b/source/src/vm/CMakeLists.txt
@@ -2,4 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 
 message("* vm")
 
-add_library(vm_vm ${VMFILES})
+add_library(vm_vm
+  ${VMFILES}
+  device.cpp
+  )
