--- a/source/src/vm/common_vm/CMakeLists.txt
+++ b/source/src/vm/common_vm/CMakeLists.txt
@@ -17,7 +17,7 @@ set(s_vm_common_vm_srcs
 	../ls393.cpp
 
 # MC6809 is temporally.
-#	../mc6809.cpp
+	../libcpu_newdev/libcpu_mc6809/mc6809_base.cpp
 	../mc6820.cpp
 	../mc6840.cpp
 
